Fixing missing space in syslogs

--- a/core/interface/static/css/projectalice.css
+++ b/core/interface/static/css/projectalice.css
@@ -94,6 +94,7 @@ button.button{ font-size: 1.6em; height: 2em; }
 /* console and logging */
 /* using color markings as defined above */
 .console { position: absolute; top: 20px; bottom: 40px; left: 20px; right: 20px; padding: 1em; background-color: black; color: var(--text); overflow-y: scroll; overflow-x: hidden; font-family: var(--readable); }
+.log { display: inline-block; }
 .logLine { display: flex; font-family: var(--readable); font-size: 0.9em; margin: 2px 0 2px 0; align-items: flex-start; }
 
 /*Home-Screen and Widget*/
